--- a/index.html
+++ b/index.html
@@ -24,13 +24,27 @@ h3, h4 { margin: 0 0 6px 0; }
 /* 赤文字 */
 .red-text { color: red; }
 
-/* 表のスタイル */
+/* 表のスタイル（スマホ用：デフォルト） */
 .table-container { overflow-x: auto; margin-top: 8px; }
 table { border-collapse: collapse; width: 100%; min-width: 320px; font-size: 10px; }
 th, td { border: 1px solid #333; padding: 2px 1px; text-align: center; line-height: 1.1; white-space: nowrap; }
 th { background-color: #f0f0f0; font-weight: bold; font-size: 9px; }
 .header-row { background-color: #e0e0e0; }
 .note { font-size: 11px; margin-top: 4px; color: #666; line-height: 1.3; }
+
+/* PC用（画面幅768px以上） */
+@media (min-width: 768px) {
+  body { font-size: 18px; }
+  select, input { font-size: 18px; padding: 6px; }
+  .result { font-size: 20px; }
+  .input-group label { font-size: 14px; line-height: 1.3; }
+  
+  /* 表のスタイル（PC用） */
+  table { min-width: 600px; font-size: 14px; }
+  th, td { padding: 4px 6px; line-height: 1.3; }
+  th { font-size: 13px; }
+  .note { font-size: 13px; }
+}
 </style>
 </head>
 
