--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ h3, h4 { margin: 0 0 6px 0; }
 .input-row { display: flex; gap: 8px; margin: 4px 0; align-items: center; }
 .input-group { flex: 0 0 auto; min-width: 0; }
 .input-group label { display: block; font-size: 11px; margin-bottom: 2px; line-height: 1.2; white-space: nowrap; }
-.input-group select, .input-group input { width: 80px; box-sizing: border-box; }
+.input-group select, .input-group input { width: 50px; box-sizing: border-box; }
 .result-row { display: flex; gap: 12px; margin: 4px 0; flex-wrap: wrap; }
 .result-item { flex: 0 0 auto; white-space: nowrap; }
 
@@ -43,10 +43,10 @@ th { background-color: #f0f0f0; font-weight: bold; font-size: 9px; }
 /* PC用（画面幅768px以上） */
 @media (min-width: 768px) {
   body { font-size: 18px; }
-  select, input { font-size: 16px; padding: 6px; max-width: 90px; }
+  select, input { font-size: 16px; padding: 6px; }
   .result { font-size: 18px; }
   .input-group label { font-size: 12px; line-height: 1.3; }
-  .input-group select, .input-group input { width: 90px; }
+  .input-group select, .input-group input { width: 55px; }
   
   /* 2カラムレイアウト（PC用） */
   .main-container { flex-direction: row; align-items: flex-start; }
