--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@ th { background-color: #f0f0f0; font-weight: bold; font-size: 9px; }
 <body>
 
 <div class="main-container">
-  <!-- 左カラム：電線選定と単相三線 -->
+  <!-- 左カラム：負荷電線選定と単相三線 -->
   <div class="left-column">
-    <h3>電線選定</h3>
+    <h3>負荷電線選定</h3>
 
     <div class="input-row">
       <div class="input-group">
@@ -156,7 +156,7 @@ th { background-color: #f0f0f0; font-weight: bold; font-size: 9px; }
     <!-- 回路図セクション -->
     <div class="section diagram-section">
       <h4>回路図</h4>
-      <div style="text-align: center; margin-top: 10px;">
+      <div style="text-align: center; margin-top: 2px;">
         <img src="KAIRO.svg" alt="回路図">
       </div>
     </div>
