--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@ h3, h4 { margin: 0 0 6px 0; }
 .result-row { display: flex; gap: 12px; margin: 4px 0; flex-wrap: wrap; }
 .result-item { flex: 0 0 auto; white-space: nowrap; }
 
+/* 単相三線用の小さい入力ボックス（スマホのみ） */
+.small-input .input-group select,
+.small-input .input-group input { width: 50px; }
+
 /* 赤文字 */
 .red-text { color: red; }
 
@@ -47,6 +51,10 @@ th { background-color: #f0f0f0; font-weight: bold; font-size: 9px; }
   .result { font-size: 18px; }
   .input-group label { font-size: 12px; line-height: 1.3; }
   .input-group select, .input-group input { width: 75px; }
+  
+  /* PC用では単相三線も75pxに戻す */
+  .small-input .input-group select,
+  .small-input .input-group input { width: 75px; }
   
   /* 2カラムレイアウト（PC用） */
   .main-container { flex-direction: row; align-items: flex-start; }
@@ -109,7 +117,7 @@ th { background-color: #f0f0f0; font-weight: bold; font-size: 9px; }
     <div class="section">
       <h4>単相三線</h4>
 
-      <div class="input-row">
+      <div class="input-row small-input">
         <div class="input-group">
           <label>蓄電池<br>最大放電<br>電流[A]</label>
           <input type="number" id="batteryMax" placeholder="任意">
