--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@ th { background-color: #f0f0f0; font-weight: bold; font-size: 9px; }
   select, input { font-size: 16px; padding: 6px; }
   .result { font-size: 18px; }
   .input-group label { font-size: 12px; line-height: 1.3; }
-  .input-group select, .input-group input { width: 75px; }
+  .input-group select, .input-group input { width: 85px; }
   
-  /* PC用では単相三線も75pxに戻す */
+  /* PC用では単相三線は75px */
   .small-input .input-group select,
   .small-input .input-group input { width: 75px; }
   
